--- a/README
+++ b/README
@@ -4,3 +4,5 @@
 3. Create/update "timeskew" file in current directory to update time coefficient, e.g. `echo 1 3 > timeskew` - slow down 3x.
 
 TIMESHIFT also sets constant time shift
+
+License=MIT or (at your option) GPLv3
