--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-(Early version)
+(Note: the project is hacky and unreliable)
+
 1. "make" will provide libtimeskew.so
 2. Use `TIMESKEW="2 1" LD_PRELOAD=./libtimeskew.so program` to start program with time 2x faster than usual
 3. Create/update "timeskew" file in current directory to update time coefficient, e.g. `echo 1 3 > timeskew` - slow down 3x.
@@ -9,3 +10,4 @@ License=MIT or (at your option) GPLv3
 
 See also:
 * Forked timeskew with a GUI (not tested myself): https://github.com/id01/timeskew
+* https://github.com/wolfcw/libfaketime
